--- a/WB100W/app/src/main/res/values/strings.xml
+++ b/WB100W/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="app_name">WB100W</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="app_hider">隐藏应用</string>
-    <string name="main">首页</string>
+    <string name="app_hider">Hide Application</string>
+    <string name="main">Home</string>
+    <string name="day"></string>
 
 </resources>
