--- a/APPLIST/app/src/main/res/values/strings.xml
+++ b/APPLIST/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="app_hider">隐藏应用</string>
-    <string name="main">首页</string>
+    <string name="main">My App</string>
 
 </resources>
