--- a/APPLIST/app/src/main/res/values/strings.xml
+++ b/APPLIST/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">APP List</string>
+    <string name="app_name">My App</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="app_hider">隐藏应用</string>
-    <string name="main">My App</string>
 
 </resources>
